# test_project

./: .gitignore  README.md  pyproject.toml  pytest-watch.ini
app/: main.py  schemas.py
app/data/: completion_format.json
app/services/: categorize_query.py  generate_form.py
baml_src/: categorize_query.baml  clients.baml  complete_form.baml
tests/: __init__.py  test_main.py  test_performance.py  test_schemas.py
